[package]
name = "c2c2pa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# the sign feature allows signing without file_io, remove default features to not use default thumbnail generationsmake 
c2pa = {git = "https://github.com/contentauth/c2pa-rs.git", branch = "gpeacock/save_to_memory",features = ["sign"]}

[profile.release] 
strip = true  # Automatically strip symbols from the binary. 
opt-level = "z"  # Optimize for size. 
lto = "thin" # Link time optimization. 