[package]
name = "c2c2pa"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["staticlib"]

[dependencies]
# the sign feature allows signing without file_io, remove no_default_features enable  thumbnail generation
c2pa = {version="0.16.0", no_default_features = true, features = ["sign"]}

[profile.release] 
strip = true  # Automatically strip symbols from the binary. 
opt-level = "z"  # Optimize for size. 
lto = "thin" # Link time optimization.

